compito g3 + piccole aggiunte compito g2

--- a/m1/s1/g2/compito/post.html
+++ b/m1/s1/g2/compito/post.html
@@ -88,7 +88,7 @@
             </tbody>
         </table>
 
-        <p>Un test di validazione potrà essere fatto tramite il tool online --- dedicato allo scopo. Una volta ottimizzato il tutto, avremo raggiunto il nostro obiettivo ed essere stati dei veri developers come loro:</p>
+        <p>Un test di validazione potrà essere fatto tramite un apposito <a href="https://www.caniuse.com" target="_blank" id="tool">tool online</a> dedicato allo scopo. Una volta ottimizzato il tutto, avremo raggiunto il nostro obiettivo ed essere stati dei veri developers come loro:</p>
         
         <iframe width="560" height="315" src="https://www.youtube.com/embed/BMcCXG8ZCG4?si=w1E5V4x68fqId1oy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </main>
@@ -167,5 +167,8 @@
         <p>Testata online di Mario Rossi, registrata con prot. n.213/2018 - via Luigi Einaudi 2 - Milano. P.IVA 00112233.</p>
         <a href="mailto:info@epicode.school"><p>info@epicode.school</p></a>
     </footer>
+
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
