--- a/m1/s1/progetto/desktop/index.html
+++ b/m1/s1/progetto/desktop/index.html
@@ -22,7 +22,7 @@
     </header>
 
     <main>
-        <section class="intro">
+        <section id="intro">
             <h1>Corso Web Developer</h1>
 
             <p>Smetti di inseguire i titoli, inizia a lavorare. Mentre tutti vogliono arricchire il CV, tu pensa ad arricchire le tue competenze</p>
@@ -30,13 +30,13 @@
             <a href="#">PARTIAMO!</a>
         </section>
 
-        <section class="info">
-            <div class="contenuto">
-                <div class="foto">
+        <section id="info">
+            <div id="contenuto">
+                <div id="foto">
                     <img src="images/notebook.jpg" alt="Foto notebook">
                 </div>
 
-                <div class="testi">
+                <div id="testi">
                     <h3>Tutti ti cercheranno</h3>
                     <p>Sono 30.000 in Italia le posizioni di developer scoperte, scegli quella che ti stimola di più</p>
 
@@ -52,7 +52,7 @@
             </div>
         </section>
 
-        <section class="testimonianze">
+        <section id="testimonianze">
             <h2>Epicode garantisce</h2>
 
             <figure>
@@ -63,7 +63,7 @@
             <p>CEO, Epicode</p>
         </section>
 
-        <section class="cards">
+        <section id="cards">
             <div>
                 <a href="#"><img src="images/foto1.jpg" alt="Foto 1"></a>
                 <h3>Il tuo PC</h3>
