--- a/m1/s1/progetto/mobile/index.html
+++ b/m1/s1/progetto/mobile/index.html
@@ -22,7 +22,7 @@
     </header>
 
     <main>
-        <section class="intro">
+        <section id="intro">
             <h1>Corso Web Developer</h1>
 
             <p>Smetti di inseguire i titoli, inizia a lavorare. Mentre tutti vogliono arricchire il CV, tu pensa ad arricchire le tue competenze</p>
@@ -30,7 +30,7 @@
             <a href="#">PARTIAMO!</a>
         </section>
 
-        <section class="info">
+        <section id="info">
             <h3>Tutti ti cercheranno</h3>
             <p>Sono 30.000 in Italia le posizioni di developer scoperte, scegli quella che ti stimola di più</p>
 
@@ -46,18 +46,18 @@
             <p>Non serve lavorare in ufficio per essere creatori di prodotti digitali</p>
         </section>
 
-        <section class="testimonianze">
+        <section id="testimonianze">
             <h2>Epicode garantisce</h2>
 
             <figure>
                 <blockquote>"3 mesi intensivi di corso che cambieranno radicalmente la tua vita"</blockquote>
 
                 <figcaption>Mario Rossi</figcaption>
+                <p>CEO, Epicode</p>
             </figure>
-            <p>CEO, Epicode</p>
         </section>
 
-        <section class="cards">
+        <section id="cards">
             <div>
                 <a href="#"><img src="images/foto1.jpg" alt="Foto 1"></a>
                 <h3>Il tuo PC</h3>
