to-do-list completata

--- a/m1/s3/g3/index.html
+++ b/m1/s3/g3/index.html
@@ -21,7 +21,7 @@
     <div id="container">
         <h1>TO-DO-LIST</h1>
 
-        <p>Scrivi qui le task da completare, e segnale come completate passandoci sopra con il mouse e cliccando sulla spunta. Puoi anche eliminarle cliccando sull'icona del cestino, oppure riportarle nella lista delle cose da fare se ti sei sbagliando a catalogarle come fatte</p>
+        <p>Scrivi qui le task da completare, e segnale come completate cliccandoci sopra. Puoi anche eliminarle cliccando sull'icona del cestino, oppure riportarle nella lista delle cose da fare se ti sei sbagliando a catalogarle come fatte</p>
 
         <form>
             <input type="text" placeholder="Scrivi una nuova task">
