--- a/m1/s3/g4/calendario/index.html
+++ b/m1/s3/g4/calendario/index.html
@@ -18,8 +18,30 @@
 </head>
 <body>
     <div id="container">
+        <div id="color-picker">
+            <div id="div1">
+                <p>Scegli il main color</p>
+                <input type="color">
+            </div>
+
+            <div id="div2">
+                <p>Scegli il secondary color</p>
+                <input type="color">
+            </div>
+
+            <div id="div3">
+                <p>Scegli il colore dei bottoni</p>
+                <input type="color">
+            </div>
+
+            <div id="div4">
+                <p>Scegli il colore dei testi</p>
+                <input type="color">
+            </div>
+        </div>
+
         <div id="first-div">
-            <p>Marzo</p>
+            <p></p>
 
             <div id="arrow-div">
                 <i class="fas fa-chevron-left" id="previous-month"></i>
