primo commit progetto settimanale

--- a/m2/s1/g4/start1/postit.html
+++ b/m2/s1/g4/start1/postit.html
@@ -13,6 +13,9 @@
 </head>
 
 <body>
+    <div id="ciao">
+        <div id="mondo"></div>
+    </div>
     <div id="container">
         <div class="postit giallo">
             <div class="postit-container">
