--- a/m2/s1/progetto/index.html
+++ b/m2/s1/progetto/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Medium - Where good ideas find you</title>
 
+    <!-- FONTAWESOME -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -5573,6 +5576,40 @@
             </aside>
         </div>
     </div>
+
+    <footer>
+        <div class="container">
+            <img src="assets/imgs/svg/logo.svg" alt="logo">
+            <nav>
+                <ul>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Help</a></li>
+                    <li><a href="#">Terms</a></li>
+                    <li><a href="#">Privacy</a></li>
+                </ul>
+            </nav>
+
+            <div class="footer-line"></div>
+
+            <p>Get the Medium app</p>
+            <div id="store">
+                <div id="app-store-div">
+                    <i class="fab fa-app-store-ios apple"></i>
+                    <div>
+                        <p id="p1">Download on the</p>
+                        <p>App Store</p>
+                    </div>
+                </div>
+                <div id="google-play-div">
+                    <i class="fab fa-google-play google"></i>
+                    <div>
+                        <p id="p2">GET IT ON</p>
+                        <p>Google Play</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="assets/js/script.js"></script>
 </body>
