--- a/m2/s1/progetto/index.html
+++ b/m2/s1/progetto/index.html
@@ -5611,6 +5611,22 @@
         </div>
     </footer>
 
+    <div id="popup" class="transition-display">
+        <h3>Join Medium</h3>
+        <nav>
+            <ul>
+                <li><a href="#">Sign up with Google</a></li>
+                <li><a href="#">Sign up with Facebook</a></li>
+                <li><a href="#">Sign up with Email</a></li>
+            </ul>
+        </nav>
+        <p id="sign-in">Already have an account? <a href="#">Sign in</a></p>
+        <p id="sign-up">Click “Sign Up” to agree to Medium’s <a href="#">Terms of Service</a> and acknowledge that Medium’s <a href="#">Privacy Policy</a> applies to you.</p>
+        <div id="close">+</div>
+    </div>
+
+    <div id="panel"></div>
+
     <script src="assets/js/script.js"></script>
 </body>
 
