sistemate le posizioni della hover card

--- a/m2/s1/progetto/index.html
+++ b/m2/s1/progetto/index.html
@@ -5647,22 +5647,22 @@
     </div>
 
     <!-- TEMPLATE HOVER CARD -->
-    <!-- <template>
+    <template>
         <div id="hover-card">
             <div id="pointer"></div>
             <div id="hover-author-info">
                 <img src="" alt="author img">
-                <p>Tom Cooper</p>
+                <p></p>
             </div>
             <div id="cover"></div>
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
             <div id="hover-line"></div>
             <div id="hover-author-social-info">
-                <p id="followers">230K Followers</p>
+                <p id="followers"></p>
                 <a href="#" id="follow">Follow</a>
             </div>
         </div>
-    </template> -->
+    </template>
 
     <div id="panel"></div>
 
