aggiunti commenti per Michele

--- a/m2/s1/progetto/index.html
+++ b/m2/s1/progetto/index.html
@@ -5291,7 +5291,7 @@
         </div>
     </div>
 
-    <!-- TRENDING SECTION -->
+    <!-- TRENDING SECTION (SIA QUI CHE NELLA SEZIONE DEI POST NON HO AGGIUNTO LA CLASSE FLEX AD OGNI POST PERCHE SAREBBE STATO PIU LUNGO AGGIUNGERE LA CLASSE AD OGNUNO PIUTTOSTO CHE SELEZIONARLI TUTTI INSIEME E DARGLI FLEX CON UN UNICO SELETTORE CSS) -->
     <main id="trending">
         <div class="container">
             <div class="info flex">
