--- a/m2/s1/progetto/index.html
+++ b/m2/s1/progetto/index.html
@@ -5410,7 +5410,7 @@
                         <p class="post-text2">What we consider "old" changes dramatically with age, and our perspectives can be predictive of how well we age</p>
 
                         <div class="post-text-info2">
-                            <p>Oct 27 &middot; 5 min read &middot; <a href="#">Aging</a> <span><img src="assets/imgs/svg/star.svg" alt="star"></span></p>
+                            <p>Oct 27 &middot; 5 min read <span class="remove">&middot;</span> <a href="#">Aging</a> <span><img src="assets/imgs/svg/star.svg" alt="star"></span></p>
 
                             <img src="assets/imgs/svg/bookmark.svg" alt="bookmark">
                         </div>
@@ -5431,7 +5431,7 @@
                         <p class="post-text2">Can you speak about your trauma if you don't look traumatized?</p>
 
                         <div class="post-text-info2">
-                            <p>Oct 24 &middot; 6 min read &middot; <a href="#">Health</a> <span><img src="assets/imgs/svg/star.svg" alt="star"></span></p>
+                            <p>Oct 24 &middot; 6 min read <span class="remove">&middot;</span> <a href="#">Health</a> <span><img src="assets/imgs/svg/star.svg" alt="star"></span></p>
 
                             <img src="assets/imgs/svg/bookmark.svg" alt="bookmark">
                         </div>
@@ -5452,7 +5452,7 @@
                         <p class="post-text2">Software Engineer, yours is the right to produce high-quality work at all times, also the liability</p>
 
                         <div class="post-text-info2">
-                            <p>Oct 15 &middot; 5 min read &middot; <a href="#">Software Engineering</a> <span><img src="assets/imgs/svg/star.svg" alt="star"></span></p>
+                            <p>Oct 15 &middot; 5 min read <span class="remove">&middot;</span> <a href="#">Software Engineering</a> <span><img src="assets/imgs/svg/star.svg" alt="star"></span></p>
 
                             <img src="assets/imgs/svg/bookmark.svg" alt="bookmark">
                         </div>
@@ -5473,7 +5473,7 @@
                         <p class="post-text2">How product designers can break from the status quo and help our planet</p>
 
                         <div class="post-text-info2">
-                            <p>Oct 25 &middot; 11 min read &middot; <a href="#">Sustainability</a></p>
+                            <p>Oct 25 &middot; 11 min read <span class="remove">&middot;</span> <a href="#">Sustainability</a></p>
 
                             <img src="assets/imgs/svg/bookmark.svg" alt="bookmark">
                         </div>
@@ -5494,7 +5494,7 @@
                         <p class="post-text2">Bruce Lee is reported to have said, "I fear not the man who has practiced 10,000 kicks once, but the man who has practiced one...</p>
 
                         <div class="post-text-info2">
-                            <p>Oct 26 &middot; 7 min read &middot; <a href="#">Learning</a> <span><img src="assets/imgs/svg/star.svg" alt="star"></span></p>
+                            <p>Oct 26 &middot; 7 min read <span class="remove">&middot;</span> <a href="#">Learning</a> <span><img src="assets/imgs/svg/star.svg" alt="star"></span></p>
 
                             <img src="assets/imgs/svg/bookmark.svg" alt="bookmark">
                         </div>
@@ -5515,7 +5515,7 @@
                         <p class="post-text2">Lock a group of people in a room and you'll witness some surprising confessions</p>
 
                         <div class="post-text-info2">
-                            <p>Jan 18, 2020 &middot; 6 min read &middot; <a href="#">Experiences</a> <span><img src="assets/imgs/svg/star.svg" alt="star"></span></p>
+                            <p>Jan 18, 2020 &middot; 6 min read <span class="remove">&middot;</span> <a href="#">Experiences</a> <span><img src="assets/imgs/svg/star.svg" alt="star"></span></p>
 
                             <img src="assets/imgs/svg/bookmark.svg" alt="bookmark">
                         </div>
@@ -5536,7 +5536,7 @@
                         <p class="post-text2">With more people working in remote and hybrid environments than ever before, company, team and individual goals must be explicit...</p>
 
                         <div class="post-text-info2">
-                            <p>Oct 25 &middot; 10 min read &middot; <a href="#">Productivity</a></p>
+                            <p>Oct 25 &middot; 10 min read <span class="remove">&middot;</span> <a href="#">Productivity</a></p>
 
                             <img src="assets/imgs/svg/bookmark.svg" alt="bookmark">
                         </div>
