--- a/m2/s1/progetto/index.html
+++ b/m2/s1/progetto/index.html
@@ -13,7 +13,7 @@
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;600;700&family=Spectral:wght@400;500;600;700&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;600;700&family=Spectral:wght@400&display=swap"
         rel="stylesheet">
 
     <!-- CSS -->
