--- a/m2/s2/progetto/index.html
+++ b/m2/s2/progetto/index.html
@@ -51,15 +51,15 @@
                         <div class="d-flex align-items-center">
                             <a href="#" class="text-grey text-decoration-none margin-12">KIDS</a>
                             <i class="bi bi-bell-fill text-light margin-12 hover-red"></i>
-                            <div class="dropdown">
+                            <div class="dropdown position-relative">
                                 <button class="dropdown-toggle transparent pe-0" type="button" data-bs-toggle="dropdown"
                                     aria-expanded="false">
                                     <img src="Netflix-assets/assets/avatar.png" alt="avatar">
                                 </button>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Action</a></li>
-                                    <li><a class="dropdown-item" href="#">Action</a></li>
-                                    <li><a class="dropdown-item" href="#">Action</a></li>
+                                <ul class="dropdown-menu position-absolute" id="custom-position">
+                                    <li><a class="dropdown-item list-item" href="#">Account</a></li>
+                                    <li><a class="dropdown-item list-item" href="#">Settings</a></li>
+                                    <li><a class="dropdown-item list-item" href="#">Logout</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -73,16 +73,11 @@
             <section id="first-div" class="d-flex justify-content-between align-items-center mt-2">
                 <div id="div1" class="d-flex align-items-center">
                     <h1 class="text-white">TV Shows</h1>
-                    <select class="text-white bg-black rounded-1 ms-4 pe-2">
-                        <option>Genres</option>
-                        <option>Comedy</option>
-                        <option>Action</option>
-                        <option>Fantasy</option>
-                    </select>
+                    <button class="text-white bg-black rounded-1 ms-4 px-2">Genres <i class="bi bi-caret-down-fill ms-3"></i></button>
                 </div>
 
                 <div id="div2" class="d-none d-sm-flex">
-                    <div class="d-flex justify-content-center align-items-center flex-div">
+                    <div class="d-flex justify-content-center align-items-center flex-div layout-selection">
                         <i class="bi bi-list"></i>
                     </div>
                     <div class="d-flex flex-column flex-div">
@@ -106,17 +101,39 @@
                         <i class="bi bi-caret-left-fill"></i>
                     </button>
                     <div class="carousel">
-                        <img src="Netflix-assets/assets/media/media0.webp" alt="">
-                        <img src="Netflix-assets/assets/media/media1.jpg" alt="">
-                        <img src="Netflix-assets/assets/media/media2.webp" alt="">
-                        <img src="Netflix-assets/assets/media/media3.webp" alt="">
-                        <img src="Netflix-assets/assets/media/media4.jpg" alt="">
-                        <img src="Netflix-assets/assets/media/media5.webp" alt="">
-                        <img src="Netflix-assets/assets/media/media6.jpg" alt="">
-                        <img src="Netflix-assets/assets/media/media7.webp" alt="">
-                        <img src="Netflix-assets/assets/media/media8.webp" alt="">
-                        <img src="Netflix-assets/assets/media/media9.jpg" alt="">
-                        <img src="Netflix-assets/assets/media/media10.jpg" alt="">
+                        <a href="#">
+                            <img src="Netflix-assets/assets/media/media0.webp" alt="">
+                        </a>
+                        <a href="#">
+                            <img src="Netflix-assets/assets/media/media1.jpg" alt="">
+                        </a>
+                        <a href="#">
+                            <img src="Netflix-assets/assets/media/media2.webp" alt="">
+                        </a>
+                        <a href="#">
+                            <img src="Netflix-assets/assets/media/media3.webp" alt="">
+                        </a>
+                        <a href="#">
+                            <img src="Netflix-assets/assets/media/media4.jpg" alt="">
+                        </a>
+                        <a href="#">
+                            <img src="Netflix-assets/assets/media/media5.webp" alt="">
+                        </a>
+                        <a href="#">
+                            <img src="Netflix-assets/assets/media/media6.jpg" alt="">
+                        </a>
+                        <a href="#">
+                            <img src="Netflix-assets/assets/media/media7.webp" alt="">
+                        </a>
+                        <a href="#">
+                            <img src="Netflix-assets/assets/media/media8.webp" alt="">
+                        </a>
+                        <a href="#">
+                            <img src="Netflix-assets/assets/media/media9.jpg" alt="">
+                        </a>
+                        <a href="#">
+                            <img src="Netflix-assets/assets/media/media10.jpg" alt="">
+                        </a>
                     </div>
                     <button class="next-movie d-none d-sm-inline-block">
                         <i class="bi bi-caret-right-fill"></i>
@@ -131,17 +148,39 @@
                         <i class="bi bi-caret-left-fill"></i>
                     </button>
                     <div class="carousel">
-                        <img src="Netflix-assets/assets/media/media11.jpg" alt="">
-                        <img src="Netflix-assets/assets/media/media12.jpg" alt="">
-                        <img src="Netflix-assets/assets/media/media13.jpg" alt="">
-                        <img src="Netflix-assets/assets/media/media14.webp" alt="">
-                        <img src="Netflix-assets/assets/media/media15.jpg" alt="">
-                        <img src="Netflix-assets/assets/media/media16.webp" alt="">
-                        <img src="Netflix-assets/assets/media/media17.jpg" alt="">
-                        <img src="Netflix-assets/assets/media/media18.jpg" alt="">
-                        <img src="Netflix-assets/assets/media/media19.webp" alt="">
-                        <img src="Netflix-assets/assets/media/media20.jpg" alt="">
-                        <img src="Netflix-assets/assets/media/media21.webp" alt="">
+                        <a href="#">
+                            <img src="Netflix-assets/assets/media/media11.jpg" alt="film">
+                        </a>
+                        <a href="#">
+                            <img src="Netflix-assets/assets/media/media12.jpg" alt="film">
+                        </a>
+                        <a href="#">
+                            <img src="Netflix-assets/assets/media/media13.jpg" alt="film">
+                        </a>
+                        <a href="#">
+                            <img src="Netflix-assets/assets/media/media14.webp" alt="film">
+                        </a>
+                        <a href="#">
+                            <img src="Netflix-assets/assets/media/media15.jpg" alt="film">
+                        </a>
+                        <a href="#">
+                            <img src="Netflix-assets/assets/media/media16.webp" alt="film">
+                        </a>
+                        <a href="#">
+                            <img src="Netflix-assets/assets/media/media17.jpg" alt="film">
+                        </a>
+                        <a href="#">
+                            <img src="Netflix-assets/assets/media/media18.jpg" alt="film">
+                        </a>
+                        <a href="#">
+                            <img src="Netflix-assets/assets/media/media19.webp" alt="film">
+                        </a>
+                        <a href="#">
+                            <img src="Netflix-assets/assets/media/media20.jpg" alt="film">
+                        </a>
+                        <a href="#">
+                            <img src="Netflix-assets/assets/media/media21.webp" alt="film">
+                        </a>
                     </div>
                     <button class="next-movie d-none d-sm-inline-block">
                         <i class="bi bi-caret-right-fill"></i>
@@ -156,17 +195,39 @@
                         <i class="bi bi-caret-left-fill"></i>
                     </button>
                     <div class="carousel">
-                        <img src="Netflix-assets/assets/media/media22.webp" alt="">
-                        <img src="Netflix-assets/assets/media/media23.webp" alt="">
-                        <img src="Netflix-assets/assets/media/media24.jpg" alt="">
-                        <img src="Netflix-assets/assets/media/media25.webp" alt="">
-                        <img src="Netflix-assets/assets/media/media26.webp" alt="">
-                        <img src="Netflix-assets/assets/media/media27.jpg" alt="">
-                        <img src="Netflix-assets/assets/media/media28.jpg" alt="">
-                        <img src="Netflix-assets/assets/media/media29.jpg" alt="">
-                        <img src="Netflix-assets/assets/media/media30.jpg" alt="">
-                        <img src="Netflix-assets/assets/media/media31.webp" alt="">
-                        <img src="Netflix-assets/assets/media/media32.jpg" alt="">
+                        <a href="#">
+                            <img src="Netflix-assets/assets/media/media22.webp" alt="film">
+                        </a>
+                        <a href="#">
+                            <img src="Netflix-assets/assets/media/media23.webp" alt="film">
+                        </a>
+                        <a href="#">
+                            <img src="Netflix-assets/assets/media/media24.jpg" alt="film">
+                        </a>
+                        <a href="#">
+                            <img src="Netflix-assets/assets/media/media25.webp" alt="film">
+                        </a>
+                        <a href="#">
+                            <img src="Netflix-assets/assets/media/media26.webp" alt="film">
+                        </a>
+                        <a href="#">
+                            <img src="Netflix-assets/assets/media/media27.jpg" alt="film">
+                        </a>
+                        <a href="#">
+                            <img src="Netflix-assets/assets/media/media28.jpg" alt="film">
+                        </a>
+                        <a href="#">
+                            <img src="Netflix-assets/assets/media/media29.jpg" alt="film">
+                        </a>
+                        <a href="#">
+                            <img src="Netflix-assets/assets/media/media30.jpg" alt="film">
+                        </a>
+                        <a href="#">
+                            <img src="Netflix-assets/assets/media/media31.webp" alt="film">
+                        </a>
+                        <a href="#">
+                            <img src="Netflix-assets/assets/media/media32.jpg" alt="film">
+                        </a>
                     </div>
                     <button class="next-movie d-none d-sm-inline-block">
                         <i class="bi bi-caret-right-fill"></i>
