--- a/m2/s2/progetto/index.html
+++ b/m2/s2/progetto/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Netflix clone</title>
+    <title>Netflix homepage</title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap-icons/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.min.css">
 </head>
 
 <body class="bg-primary">
@@ -53,11 +53,11 @@
                             <i class="bi bi-bell-fill text-light margin-12 hover-red"></i>
                             <div class="dropdown position-relative">
                                 <button class="dropdown-toggle transparent pe-0" type="button" data-bs-toggle="dropdown"
-                                    aria-expanded="false">
+                                    aria-expanded="false" id="toggle">
                                     <img src="Netflix-assets/assets/avatar.png" alt="avatar">
                                 </button>
                                 <ul class="dropdown-menu position-absolute" id="custom-position">
-                                    <li><a class="dropdown-item list-item" href="#">Account</a></li>
+                                    <li><a class="dropdown-item list-item" href="profile.html">Profile</a></li>
                                     <li><a class="dropdown-item list-item" href="#">Settings</a></li>
                                     <li><a class="dropdown-item list-item" href="#">Logout</a></li>
                                 </ul>
@@ -73,7 +73,7 @@
             <section id="first-div" class="d-flex justify-content-between align-items-center mt-2">
                 <div id="div1" class="d-flex align-items-center">
                     <h1 class="text-white">TV Shows</h1>
-                    <button class="text-white bg-black rounded-1 ms-4 px-2">Genres <i class="bi bi-caret-down-fill ms-3"></i></button>
+                    <button class="text-white bg-black rounded-1 ms-4 px-2 buttons">Genres <i class="bi bi-caret-down-fill ms-3"></i></button>
                 </div>
 
                 <div id="div2" class="d-none d-sm-flex">
