--- a/m2/s2/progetto/index.html
+++ b/m2/s2/progetto/index.html
@@ -58,7 +58,7 @@
                                 </button>
                                 <ul class="dropdown-menu position-absolute" id="custom-position">
                                     <li><a class="dropdown-item list-item" href="profile.html">Profile</a></li>
-                                    <li><a class="dropdown-item list-item" href="#">Settings</a></li>
+                                    <li><a class="dropdown-item list-item" href="settings.html">Settings</a></li>
                                     <li><a class="dropdown-item list-item" href="#">Logout</a></li>
                                 </ul>
                             </div>
