--- a/m2/s2/progetto/settings.html
+++ b/m2/s2/progetto/settings.html
@@ -49,7 +49,7 @@
                             <a class="nav-link text-grey" href="#">My List</a>
                         </li>
                     </ul>
-                    <div class="nav-box d-flex flex-column flex-lg-row align-items-lg-center">
+                    <div class="nav-box d-flex flex-column flex-lg-row align-items-lg-center pb-4">
                         <form class="d-flex align-items-center">
                             <i class="bi bi-search text-light margin-12 hover-red order-lg-2" id="search-button"></i>
                             <!-- LE ICONE SONO BIANCHE NELLA FOTO -->
