--- a/m2/s2/progetto/index.html
+++ b/m2/s2/progetto/index.html
@@ -237,19 +237,21 @@
         </main>
 
         <footer class="mx-auto">
-            <div id="social-div" class="d-flex column-gap-3">
-                <a href="#">
-                    <i class="bi bi-facebook"></i>
-                </a>
-                <a href="#">
-                    <i class="bi bi-instagram"></i>
-                </a>
-                <a href="#">
-                    <i class="bi bi-twitter"></i>
-                </a>
-                <a href="#">
-                    <i class="bi bi-youtube"></i>
-                </a>
+            <div id="social-div">
+                <nav class="d-flex column-gap-3">
+                    <a href="#">
+                        <i class="bi bi-facebook"></i>
+                    </a>
+                    <a href="#">
+                        <i class="bi bi-instagram"></i>
+                    </a>
+                    <a href="#">
+                        <i class="bi bi-twitter"></i>
+                    </a>
+                    <a href="#">
+                        <i class="bi bi-youtube"></i>
+                    </a>
+                </nav>
             </div>
             <div id="footer-div" class="d-flex flex-wrap">
                 <nav class="mt-2">
