--- a/m2/s2/progetto/settings.html
+++ b/m2/s2/progetto/settings.html
@@ -78,7 +78,7 @@
     <!-- SETTINGS SECTION -->
     <div id="my-container2" class="mt-4 px-3 pb-5 mx-auto">
         <h1>Account</h1>
-        <div class="d-sm-flex my-flex-div2">
+        <div class="d-sm-flex my-flex-div2 pt-3 mt-3 border-p">
             <div>
                 <h2 class="grey-text">MEMBERSHIP & BILLING</h2>
                 <button class="bold p-2 px-4">Cancel Membership</button>
