--- a/m2/s2/progetto/settings.html
+++ b/m2/s2/progetto/settings.html
@@ -96,8 +96,8 @@
                     <p class="grey-text bold mb-0 mt-3 mt-md-0">Phone: 321 044 1279</p>
                     <a href="#" class="mt-1 mt-sm-0">Change phone number</a>
                 </div>
-                <div class="d-md-flex justify-content-md-between mt-md-2 pt-md-2 border-p">
-                    <p class="text-primary bold mb-0 mt-3 mt-md-0"><i class="bi bi-paypal me-1"></i><span class="me-2"
+                <div class="d-md-flex justify-content-md-between mt-3 pt-3 mt-md-2 pt-md-2 border-p">
+                    <p class="text-primary bold mb-0"><i class="bi bi-paypal me-1"></i><span class="me-2"
                             id="paypal">PayPal</span>admin@strive.school</p>
                     <a href="#" class="mt-1 mt-md-0">Update payment info</a>
                 </div>
