--- a/m2/s2/progetto/index.html
+++ b/m2/s2/progetto/index.html
@@ -77,10 +77,10 @@
                 </div>
 
                 <div id="div2" class="d-none d-sm-flex">
-                    <div class="d-flex justify-content-center align-items-center flex-div layout-selection">
+                    <div class="d-flex justify-content-center align-items-center flex-div layout-button layout-selection" id="layout-button1">
                         <i class="bi bi-list"></i>
                     </div>
-                    <div class="d-flex flex-column flex-div">
+                    <div class="d-flex flex-column flex-div layout-button" id="layout-button2">
                         <div class="d-flex justify-content-center align-items-center pt-1" id="div-pt">
                             <i class="bi bi-circle-fill i-mr"></i>
                             <i class="bi bi-circle-fill"></i>
@@ -236,7 +236,7 @@
             </section>
         </main>
 
-        <footer class="mx-auto">
+        <footer class="mx-auto mt-4 mt-md-5">
             <div id="social-div">
                 <nav class="d-flex column-gap-3">
                     <a href="#">
