--- a/m2/s3/g2/index.html
+++ b/m2/s3/g2/index.html
@@ -14,6 +14,7 @@
 
         .box1, .box2{
             min-height: 100px;
+            padding: 20px;
         }
 
         .box1{
@@ -22,6 +23,13 @@
 
         .box2{
             background-color: red;
+        }
+
+        p{
+            color: white;
+            font-weight: 700;
+            text-transform: uppercase;
+            text-align: center;
         }
     </style>
 </head>
