--- a/m2/s3/progetto/modifica-prodotto.html
+++ b/m2/s3/progetto/modifica-prodotto.html
@@ -26,8 +26,8 @@
     <main id="crea-prodotto-main">
         <div class="container pb-5">
             <div class="title py-2 d-flex align-items-center">
-                <h1 class="me-3">Modifica prodotto</h1>
-                <div class="spinner-border" role="status">
+                <h1>Modifica prodotto</h1>
+                <div class="spinner-border ms-3" role="status">
                     <span class="sr-only">Loading...</span>
                 </div>
             </div>
